# phosphor

./: .gitignore  README.md  install-fonts.sh  install.sh  phosphor-cli.sh
docs/: BUILD.md  VARIANTS.md
src/: CMakeLists.txt  build.sh  kcm_metadata.json  metadata.json  retro-term-kcm.desktop.in  retro.frag  retro_term_effect.cpp  retro_term_effect.h  retro_term_kcm.cpp  retro_term_kcm.h
variants/retro-term-scale/: CMakeLists.txt  build.sh  metadata.json  retro-term
variants/retro-term-scale/src/: retro.frag  retro_term_effect.cpp  retro_term_effect.h  retro_term_kcm.cpp  retro_term_kcm.h
